优化与修复渲染